--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href=".../kiqam/CHROMAT1CA/styles.css">
+  <link rel="stylesheet" href=(../kiqam/CHROMAT1CA/styles.css">
 
   <style>
     body {
@@ -97,7 +97,7 @@
       
     <div class="e33_194"></div>
     <span class="e33_195">HOME</span>
-    <a href=".../kiqam/CHROMAT1CA/Pagina2.html">
+    <a href="../kiqam/CHROMAT1CA/Pagina2.html">
     <span class="e33_196">TURNÊ</span>
     </a>
     <span class="e16_16">In Chromatica no one thing is greater than another</span>
