--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href=("../kiqam/CHROMAT1CA/styles.css")>
+  <link rel="stylesheet" href=(../kiqam/CHROMAT1CA/styles.css)>
 
   <style>
     body {
